--- a/resume/templates/resume/add_edit_work.html
+++ b/resume/templates/resume/add_edit_work.html
@@ -1,6 +1,16 @@
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Save</button>
-</form>
-<a href="{% url 'list-work' tracking %}"> Cancel</a>
+{% extends 'base-resume.html' %}
+{% block title %}Add/edit education{% endblock %}
+{% block content %}
+{% load static %}
+
+<div class="container">
+
+    <form method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit"  class="btn btn-success">Save</button>
+    </form>
+    <a href="{% url 'list-work' tracking %}" class="btn btn-danger"> Cancel</a>
+</div>    
+
+{% endblock content %}
