--- a/resume/templates/resume/resume_eduList.html
+++ b/resume/templates/resume/resume_eduList.html
@@ -1,15 +1,32 @@
-<h2>Education Information</h2>
+{% extends 'base-resume.html' %}
+{% block title %}Add/edit education{% endblock %}
+{% block content %}
+{% load static %}
 
-{% for obj in educations %}
-    {{obj.id}}--{{ obj.schoolname }}, {{ obj.schoollocation }}
-   <a href="{% url 'addeditedu' tracking obj.edutracking  %}"> Edit</a>
-   <a href="{% url 'deleteedu' tracking obj.edutracking  %}"> Delete</a>
+<div class="container">
+    <h2>Education Information</h2>
 
-   <hr>
-{% endfor %}
+    {% for obj in educations %}
+        {{obj.id}}--{{ obj.schoolname }}, {{ obj.schoollocation }}
+       <a href="{% url 'addeditedu' tracking obj.edutracking  %}"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>
+       <a href="{% url 'deleteedu' tracking obj.edutracking  %}"style='color:red'><i class='fa fa-trash-o' ></i>  Delete</a>
+    
+       <hr>
+    {% endfor %}
+    
+    <a href="{% url 'addeditedu' tracking newone  %}" class="btn btn-outline-primary"> + Add new one</a>
 
-<a href="{% url 'addeditedu' tracking newone  %}"> Add new one</a>
+    
+    <div class="row">
+        <div class="col-6">
+            <a href="{% url 'list-work' tracking %}" class="btn btn-outline-primary"> Back</a>
+        </div>
+        <div class="col-6">
+            <a href="{% url 'list-work' tracking %}" class="btn btn-danger"> Next</a>
+        </div>
+    </div>
+</div>    
 
-<a href="{% url 'list-work' tracking %}"> Back</a>
-<a href="{% url 'list-work' tracking %}"> Next</a>
+{% endblock content %}
+
 
