--- a/resume/templates/resume/resume_home.html
+++ b/resume/templates/resume/resume_home.html
@@ -1,6 +1,6 @@
 {% extends 'resume-main.html' %}
 
-{% block title %} - Create Resume{% endblock title %}
+{% block title %} Home{% endblock title %}
 {% block content %}
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="top: 0px;">
