--- a/templates/base-resume.html
+++ b/templates/base-resume.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJXVJ9QG2Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJXVJ9QG2Q"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-  gtag('config', 'G-ZJXVJ9QG2Q');
-</script>
+	gtag('config', 'G-ZJXVJ9QG2Q');
+	</script>
     <meta charset="utf-8">
     <title>{% block title %}Jobs{% endblock %}</title>
 
@@ -267,7 +267,7 @@
 
 
         <!-- Navbar Start -->
-        <!-- <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="top: 0px;">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="top: 0px;">
             <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
                 <h1 class="m-0 text-primary">CareerCrest</h1>
             </a>
@@ -276,12 +276,28 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="{% url 'home' %}" class="nav-item nav-link">Home</a>                   
-                    <a href="{% url 'post_list' %}" class="nav-item nav-link">Blog</a>                   
-                    
+                    <a href="{% url 'create-basic' tracking %}" class="nav-item nav-link">Resume</a>                   
+                    <a href="{% url 'list-work' tracking %}" class="nav-item nav-link">work list</a>                   
+					<a href="{% url 'list-edu' tracking %}" class="nav-item nav-link">Edu list</a>                   
+                    <a href="{% url 'list-skill' tracking %}" class="nav-item nav-link">Skill list</a>                   
+                    <a href="{% url 'create-summary' tracking %}" class="nav-item nav-link">Summary</a>                   
+					<a href="{% url 'list-language' tracking %}" class="nav-item nav-link">Languages</a>                   
+					<a href="{% url 'list-interest' tracking %}" class="nav-item nav-link">Interests</a>                   
+
+					<div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">More</a>
+                        <div class="dropdown-menu rounded-0 m-0">
+							<a href="{% url 'list-accomplishment' tracking %}" class="nav-item nav-link">Accomplishments</a>                   
+							<a href="{% url 'list-affiliation' tracking %}" class="nav-item nav-link">Affiliations</a>                   
+							<a href="{% url 'list-add' tracking %}" class="nav-item nav-link">Additiona lInformation</a>                   
+							<a href="{% url 'list-software' tracking %}" class="nav-item nav-link">Software</a>                   
+							<a href="{% url 'list-cert' tracking %}" class="nav-item nav-link">Certifications</a>                   
+							<a href="{% url 'list-yourown' tracking %}" class="nav-item nav-link">YourOwn</a> 
+                        </div>
+                    </div>                  
                 </div>
             </div>
-        </nav> -->
+        </nav>
         <!-- Navbar End -->
     
        
