--- a/templates/main.html
+++ b/templates/main.html
@@ -115,6 +115,8 @@
                         </div>
                     </div>
                     <a href="{% url 'post_list' %}" class="nav-item nav-link">Blog</a>                   
+                    <a href="{% url 'resume-home' %}" class="nav-item nav-link">Resume</a>                   
+
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About us</a>
                         <div class="dropdown-menu rounded-0 m-0">
