--- a/resume/templates/resume/add_edit_afi.html
+++ b/resume/templates/resume/add_edit_afi.html
@@ -1,4 +1,4 @@
-{% extends 'base-resume.html' %}
+{% extends 'base-resume-create.html' %}
 {% block title %}Add/edit Affiliation{% endblock %}
 {% block content %}
 {% load static %}
