--- a/resume/templates/resume/add_edit_skill.html
+++ b/resume/templates/resume/add_edit_skill.html
@@ -1,13 +1,15 @@
-{% extends 'base-resume.html' %}
+{% extends 'base-resume-create.html' %}
 {% block title %}Add/edit skill{% endblock %}
 {% block content %}
 {% load static %}
+{%load crispy_forms_tags %} 
 
 <div class="container">
 
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}
+
         <button type="submit"  class="btn btn-success">Save</button>
     </form>
     <a href="{% url 'list-skill' tracking %}" class="btn btn-danger"> Cancel</a>
