--- a/resume/templates/resume/resume_home.html
+++ b/resume/templates/resume/resume_home.html
@@ -1,21 +1,5 @@
-{% extends 'resume-main.html' %}
+{% extends 'base-resume.html' %}
 
-{% block title %} Home{% endblock title %}
 {% block content %}
-        <!-- Navbar Start -->
-        <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="top: 0px;">
-            <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-                <h1 class="m-0 text-primary">CareerCrest</h1>
-            </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="{% url 'resume-home' %}" class="nav-item nav-link">Home</a>
-                </div>
-                <a href="{% url 'create-basic' tracking %} " class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Create Resume<i class="fa fa-arrow-right ms-3"></i></a>
-            </div>
-        </nav>
-        <!-- Navbar End -->
-{% endblock %}
+<a href="{% url 'create-basic' tracking %}" class="nav-item nav-link">Create Resume</a>                   
+{% endblock content %}
