--- a/resume/templates/resume/resume_interestList.html
+++ b/resume/templates/resume/resume_interestList.html
@@ -1,4 +1,4 @@
-{% extends 'base-resume.html' %}
+{% extends 'base-resume-create.html' %}
 {% block title %}Add/edit Interest{% endblock %}
 {% block content %}
 {% load static %}
