--- a/resume/templates/resume/resume_languageList.html
+++ b/resume/templates/resume/resume_languageList.html
@@ -1,4 +1,4 @@
-{% extends 'base-resume.html' %}
+{% extends 'base-resume-create.html' %}
 {% block title %}Add/edit Languages{% endblock %}
 {% block content %}
 {% load static %}
