--- a/templates/base-resume.html
+++ b/templates/base-resume.html
@@ -47,6 +47,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+	<!-- modal start  -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- modal end -->
     <style type="text/css">
         			#work-information,
 			#skills-information,
@@ -277,26 +280,31 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="{% url 'create-basic' tracking %}" class="nav-item nav-link">Resume</a>                   
-                    <a href="{% url 'list-work' tracking %}" class="nav-item nav-link">work list</a>                   
-					<a href="{% url 'list-edu' tracking %}" class="nav-item nav-link">Edu list</a>                   
-                    <a href="{% url 'list-skill' tracking %}" class="nav-item nav-link">Skill list</a>                   
-                    <a href="{% url 'create-summary' tracking %}" class="nav-item nav-link">Summary</a>                   
-					<a href="{% url 'list-language' tracking %}" class="nav-item nav-link">Languages</a>                   
-					<a href="{% url 'list-interest' tracking %}" class="nav-item nav-link">Interests</a>                   
-
+                    <a href="{% url 'list-work' tracking %}" class="nav-item nav-link">Cover Letter</a>                   
+					<a href="{% url 'list-edu' tracking %}" class="nav-item nav-link">Blog</a>                   
+					
+					
+					{% if request.user.is_authenticated %}
 					<div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">More</a>
+                        <a href="#" class="nav-link btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">My Account</a>
                         <div class="dropdown-menu rounded-0 m-0">
-							<a href="{% url 'list-accomplishment' tracking %}" class="nav-item nav-link">Accomplishments</a>                   
-							<a href="{% url 'list-affiliation' tracking %}" class="nav-item nav-link">Affiliations</a>                   
-							<a href="{% url 'list-add' tracking %}" class="nav-item nav-link">Additiona lInformation</a>                   
-							<a href="{% url 'list-software' tracking %}" class="nav-item nav-link">Software</a>                   
-							<a href="{% url 'list-cert' tracking %}" class="nav-item nav-link">Certifications</a>                   
-							<a href="{% url 'list-yourown' tracking %}" class="nav-item nav-link">YourOwn</a> 
-                        </div>
-                    </div>                  
+							
+							<a href="{% url 'account' %}"  class="nav-item nav-link">Documents</a>
+							<a href="{% url 'logout' %}"  class="nav-item nav-link">logout</a>
+
+					</div>
+					{% else %}
+					<a href="{% url 'login' %}" class="nav-item nav-link">Login</a>                   
+					<a href="{% url 'register' %}" class="nav-item nav-link btn btn-primary" style="color: white;">Register</a>                   
+					
+					{% endif %}
+
+					
+				
+					                 
                 </div>
             </div>
+
         </nav>
         <!-- Navbar End -->
     
