--- a/templates/base-resume.html
+++ b/templates/base-resume.html
@@ -50,6 +50,7 @@
 	<!-- modal start  -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- modal end -->
+	
     <style type="text/css">
         			#work-information,
 			#skills-information,
@@ -286,7 +287,7 @@
 					
 					{% if request.user.is_authenticated %}
 					<div class="nav-item dropdown">
-                        <a href="#" class="nav-link btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">My Account</a>
+                        <a href="#" class="nav-link btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">{{request.user}}</a>
                         <div class="dropdown-menu rounded-0 m-0">
 							
 							<a href="{% url 'account' %}"  class="nav-item nav-link">Documents</a>
