--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -1,5 +1,5 @@
 {% extends 'base-resume-create.html' %}
-{% block title %}Header{% endblock %}
+{% block title %}Heading{% endblock %}
 {% block content %}
 {% load static %}
 <div class="container">
