--- a/resume/templates/resume/resume_eduList.html
+++ b/resume/templates/resume/resume_eduList.html
@@ -1,5 +1,5 @@
 {% extends 'base-resume-create.html' %}
-{% block title %}Add/edit education{% endblock %}
+{% block title %}Education{% endblock %}
 {% block content %}
 {% load static %}
 
@@ -22,7 +22,7 @@
             <a href="{% url 'list-work' tracking %}" class="btn btn-outline-primary"> Back</a>
         </div>
         <div class="col-6">
-            <a href="{% url 'list-work' tracking %}" class="btn btn-danger"> Next</a>
+            <a href="{% url 'list-skill' tracking %}" class="btn btn-danger"> Next</a>
         </div>
     </div>
 </div>    
