--- a/templates/base-resume-create.html
+++ b/templates/base-resume-create.html
@@ -51,7 +51,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- modal end -->
     <style type="text/css">
-        			#work-information,
+        	#work-information,
 			#skills-information,
 			#JobExtradetails,
             #edit-JobExtradetails,
@@ -249,16 +249,16 @@
         height: 100%;
         border-radius: 10px;
         padding: 50px;
-        text-align: center;
+        /* text-align: center; */
         position: relative;
 
 
-    }
+     }
     </style>
     
 </head>
 
-<body>
+<body onload="savandget()">
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
         <div id="spinner" class="bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -271,7 +271,7 @@
 
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="top: 0px;">
-            <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
+            <a href="{% url 'resume-home' %}" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
                 <h1 class="m-0 text-primary">CareerCrest</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -279,14 +279,28 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="{% url 'create-basic' tracking %}" class="nav-item nav-link">Heading</a>                   
-                    <a href="{% url 'list-work' tracking %}" class="nav-item nav-link">Work History</a>                   
-					<a href="{% url 'list-edu' tracking %}" class="nav-item nav-link">Education</a>                   
-					<a href="{% url 'list-skill' tracking %}" class="nav-item nav-link">Skills</a>                   
-					<a href="{% url 'create-summary' tracking %}" class="nav-item nav-link">Summary</a>                   
 
-					<div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Finalize</a>
+                   
+					{% url 'create-basic' tracking as create_basic_url %}
+					<a href="{% url 'create-basic' tracking %}" class="nav-item nav-link{% if request.path == create_basic_url %} active{% endif %}">Heading</a>
+
+					{% url 'list-work' tracking as work_url %}			
+					<a href="{% url 'list-work' tracking %}" class="nav-item nav-link {% if request.path == work_url %} active{% endif %}">Work History</a>                   
+					
+					{% url 'list-edu' tracking as edu_url %}
+					<a href="{% url 'list-edu' tracking %}" class="nav-item nav-link {% if request.path == edu_url %} active{% endif %}">Education</a>                   
+					
+					{% url 'list-skill' tracking as skill_url %}
+					<a href="{% url 'list-skill' tracking %}" class="nav-item nav-link {% if request.path == skill_url %} active{% endif %}">Skills</a>                   
+
+					{% url 'create-summary' tracking as summary_url %}
+					<a href="{% url 'create-summary' tracking %}" class="nav-item nav-link {% if request.path == summary_url %} active{% endif %}">Summary</a>                   
+
+					{% url 'finalize' tracking as finalize_url %}
+					<a href="{% url 'finalize' tracking %}" class="nav-item nav-link {% if request.path == finalize_url %} active{% endif %}">finalize</a>                   
+
+					<!-- <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle {% if request.path == finalize_url %} active{% endif %}" data-bs-toggle="dropdown">Finalize</a>
                         <div class="dropdown-menu rounded-0 m-0">
 							<a href="{% url 'list-language' tracking %}" class="nav-item nav-link">Languages</a>                   
 							<a href="{% url 'list-interest' tracking %}" class="nav-item nav-link">Interests</a>                   
@@ -299,8 +313,8 @@
 							<a href="{% url 'list-add' tracking %}" class="nav-item nav-link">Additiona lInformation</a>                   
 	
 						</div>
-                    </div> 
-
+                    </div>  -->
+					
 				
 					                 
                 </div>
@@ -339,5 +353,96 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4323271819190092"
      crossorigin="anonymous"></script>
 
+	 <script>
+		function savandget() {
+			// Get all form elements
+			const formElements = document.querySelectorAll('input[type="checkbox"]');
 
-</body></html>
+			// Loop through all form elements and add event listeners to save their values to localStorage
+			for (let i = 0; i < formElements.length; i++) {
+			const element = formElements[i];
+			
+			// Check if there is a saved value in localStorage and populate the form element if there is
+			if (localStorage.getItem(element.name)) {
+				if (element.type === 'checkbox') {
+				element.checked = localStorage.getItem(element.name) === 'true';
+				} 
+			}
+			
+			// Add an event listener to save the form element's value to localStorage when it changes
+			element.addEventListener('change', function() {
+				if (element.type === 'checkbox') {
+				localStorage.setItem(element.name, element.checked);
+				} 
+			});
+			}
+			funcheckbox();
+		}
+	</script>
+	<script>
+		function funcheckbox() {
+			var checkboxes = document.querySelectorAll('input[type="checkbox"]:checked');
+			var values = [];
+			checkboxes.forEach(function(checkbox) {
+				values.push(checkbox.value);
+				const div = document.getElementById(checkbox.value);
+				div.classList.add('visit')
+				func();
+			});
+		}
+
+		function func() {
+			var nextButtons = document.querySelectorAll('.next-btn');
+			var previousButtons = document.querySelectorAll('.back-btn');
+			nextButtons.forEach(nextButton => {
+				nextButton.addEventListener("click", function() {
+					var currentQuestion = nextButton.parentElement;
+					var nextElement = currentQuestion.nextElementSibling;
+					while (nextElement) {
+						if (nextElement.classList.contains("question") && nextElement.classList.contains("visit")) {
+							nextElement.classList.add("visible");
+							currentQuestion.classList.remove("visible");
+							localStorage.setItem('visibleDiv', nextElement.id);
+							break;
+						}
+						nextElement = nextElement.nextElementSibling;
+					}
+				});
+			})
+			previousButtons.forEach(previousButton => {
+				previousButton.addEventListener("click", function() {
+					var currentQuestion = previousButton.parentElement;
+					var previousElement = currentQuestion.previousElementSibling;
+					while (previousElement) {
+						if (previousElement.classList.contains("question") && previousElement.classList.contains("visit")) {
+							previousElement.classList.add("visible");
+							currentQuestion.classList.remove("visible");
+							localStorage.setItem('visibleDiv', previousElement.id);
+
+							break;
+						}
+						previousElement = previousElement.previousElementSibling;
+					}
+				});
+			})
+
+			///
+			// Get the currently visible div from local storage, if it exists
+				const visibleDiv = localStorage.getItem('visibleDiv');
+
+				// If a visible div was found in local storage, hide all divs except for the visible one
+				if (visibleDiv) {
+				document.querySelectorAll('div.question').forEach(div => {
+					if (div.id === visibleDiv) {
+					div.classList.add("visible");
+
+					} else {
+						div.classList.remove("visible");
+					}
+				});
+				}
+			///
+		}
+	</script>
+
+	</body></html>
